# dscan

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml  publish.yml
docs/: README.md
dscan/: __init__.py  cli.py  redactor.py  scanner.py  shield.py  tracer.py  trail.py  watcher.py
dscan/attack/: __init__.py  detector.py  discovery.py  generator.py  http_target.py  models.py  report.py  runner.py
dscan/attack/payloads/: __init__.py  goal_hijacking.py  indirect_injection.py  jailbreak.py  privilege_escalation.py  prompt_injection.py  tool_misuse.py
dscan/audit/: __init__.py  models.py  scanner.py
dscan/audit/checks/: __init__.py  integrity.py  permissions.py  poisoning.py  shadow.py  versioning.py
dscan/dashboard/: __init__.py  server.py
dscan/dashboard/templates/: index.html
examples/: demo_agent.py
tests/: test_attack_detector.py  test_attack_discovery.py  test_attack_generator.py  test_attack_http.py  test_attack_models.py  test_attack_payloads.py  test_attack_report.py  test_attack_runner.py  test_audit_integrity.py  test_audit_models.py  test_audit_permissions.py  test_audit_poisoning.py  test_audit_scanner.py  test_audit_shadow.py  test_audit_versioning.py  test_cli.py  test_cli_attack.py  test_cli_audit.py  test_cli_shield.py  test_cli_trail.py  test_dashboard.py  test_integration.py  test_redactor.py  test_scanner.py  test_shield.py  test_tracer.py  test_trail.py  test_watcher.py
