[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dscan"
version = "0.1.0"
description = "An open source agent security suite"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "DeepScan Security" }]
keywords = ["agent", "security", "llm", "observability", "redaction"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "click",
    "rich",
    "aiohttp",
    "aiofiles",
    "anthropic",
    "jinja2",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
]

[project.urls]
Homepage = "https://github.com/DeepScan-Security/dscan"
Repository = "https://github.com/DeepScan-Security/dscan"

[project.scripts]
dscan = "dscan.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["dscan"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
